# Pipeline_Env

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_suite.py  ui.py
server/: app.py  graders.py  pipeline_environment.py  pipeline_scenarios.py  requirements.txt
