[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-env"
version = "1.0.0"
description = "RL environment for training agents to diagnose and repair broken CI/CD pipelines"
requires-python = ">=3.10"
dependencies = [
    "openenv-core",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]